Changed web-ext zip location

--- a/manifest.json
+++ b/manifest.json
@@ -23,7 +23,7 @@
   },
 
   "background": {
-    "scripts": ["background/build/bundle.js"]
+    "scripts": ["background.js"]
   },
 
   "content_scripts": [
