--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "install": "npm run apply -- npm i",
     "start": "webpack && concurrently -k \"npm:watch\" \"web-ext run\"",
     "build": "webpack && web-ext build",
-    "apply": "func() { cd background && \"$@\" && cd ../content && \"$@\" &&  cd ../popup && \"$@\" && cd ..; }; func",
+    "apply": "func() { cd src/background && \"$@\" && cd ../content && \"$@\" &&  cd ../popup && \"$@\" && cd ..; }; func",
     "lint": "web-ext lint",
     "watch": "webpack --watch"
   },
